--- a/examples/VectorTileLayer.ipynb
+++ b/examples/VectorTileLayer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "3e872bf4-ebce-4bf9-a693-45bbe7296b50",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "b86d142b-3904-4340-ab94-285b25998834",
    "metadata": {},
    "outputs": [],
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "7fa3311c-d409-4c46-9493-5d99cc92bd49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "5a93500bbaa94ac59a4b0190afaf8da3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +40,7 @@
        "Map(center=[4.299875503991089, 46.85012303279379], zoom=0.0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "45bcff0e-d17e-45c1-8ae3-cde10b6936a8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "925df5fd-5165-4e6f-a2bd-aa9c875c3b42",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "52a18ec7-981b-4182-846f-91c372aeac98",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "2a617173-7a1e-4e9a-a9db-3b3d6085b5ea",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "ba96582e-a837-49df-b98d-aa1f2fa9ada5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "cc12097b-8d4c-4cc1-a43e-126137249db8",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "afc43b3c-805f-4144-97a1-43c9987e9558",
    "metadata": {},
    "outputs": [],
