added test notebooks

--- a/ui-tests/tests/notebooks/GeoTIFFTileLayer_update.ipynb
+++ b/ui-tests/tests/notebooks/GeoTIFFTileLayer_update.ipynb
@@ -2,37 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef41e8f9-89cd-432e-b6fc-01cef64793a5",
+   "id": "212d6f9d-b5b7-456a-b841-0300eb7c5934",
    "metadata": {},
    "source": [
-    "# Popup Overlay"
+    "# GeoTIFF Layer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "56149091-3b9f-416e-8e13-22e59a3e9c59",
+   "id": "b83d101d-69cf-4df1-8ad3-5103b33d089e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, TileLayer, PopupOverlay\n"
+    "from ipyopenlayers import Map,GeoTIFFTileLayer,\n",
+    "m = Map(center=[5.314329221346643, 16.3625002926901], zoom=9)\n",
+    "m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "896e4087-820d-4e7b-88cf-9c19938a8476",
+   "id": "2719495a-edd2-4547-ac37-74e791513064",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8142e9c773f446209ee9ff0afd5a458d",
+       "model_id": "87aa7d5af3a24276a17cdf8af2926eae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[-11.844178003179724, 37.31477334221525], zoom=0.0)"
+       "Map(center=[5.314329221346643, 16.3625002926901], zoom=9.0)"
       ]
      },
      "execution_count": 2,
@@ -41,22 +43,8 @@
     }
    ],
    "source": [
-    "m = Map(center=[-11.844178003179724, 37.31477334221525], zoom=0)\n",
-    "m\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c598c0f4-cf58-4f5b-b610-36f1aacbb025",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a PopupOverlay and set its position and content\n",
-    "popup = PopupOverlay(position=[-120.06694821433305, 40.70520249808547], popup_content = 'United States of America')\n",
-    "\n",
-    "# Add the PopupOverlay to the map\n",
-    "m.add_overlay(popup)"
+    "geo_tiff_layer = GeoTIFFTileLayer(url='https://sentinel-cogs.s3.us-west-2.amazonaws.com/sentinel-s2-l2a-cogs/36/Q/WD/2020/7/S2A_36QWD_20200701_0_L2A/TCI.tif')\n",
+    "m.add_layer(geo_tiff_layer)"
    ]
   }
  ],
