--- a/ui-tests/tests/notebooks/HeatmapLayer_update.ipynb
+++ b/ui-tests/tests/notebooks/HeatmapLayer_update.ipynb
@@ -15,32 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map,HeatmapLayer,ZoomSlider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c4d1fa6b-ea9f-4d3b-9f50-54f977895423",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "996dab9f9de5482d9482a6813ebca7d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[9.993566065893873, 47.226106632719905], zoom=5.0)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from ipyopenlayers import Map,HeatmapLayer,\n",
     "m = Map(center=[9.993566065893873, 47.226106632719905], zoom=5)\n",
     "m"
    ]
@@ -83,18 +58,9 @@
     "    [43.6109, 3.8772, 12.35],  # Hérault \n",
     "    [50.6292, 3.0573, 12.30],  # Nord \n",
     "    [48.8534, 2.3488, 12.25],  # Paris \n",
-    "]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6d462300-edf2-4fe1-a8ff-4b934f707a41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "]\n",
     "heatmap_layer = HeatmapLayer(blur=20, radius=15, points=points_data_france)\n",
-    "m.add_layer(heatmap_layer)\n"
+    "m.add_layer(heatmap_layer)"
    ]
   }
  ],
