--- a/ui-tests/tests/notebooks/ImageOverlay_update.ipynb
+++ b/ui-tests/tests/notebooks/ImageOverlay_update.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, ImageOverlay\n"
+    "from ipyopenlayers import Map, ImageOverlay\n",
+    "m = Map(center=[8.988, -0.686], zoom=3)\n",
+    "m\n"
    ]
   },
   {
@@ -41,39 +43,8 @@
     }
    ],
    "source": [
-    "m = Map(center=[8.988, -0.686], zoom=3)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "eaebfb8e-587a-4edd-953a-ca81366cdaef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "image=ImageOverlay(image_url=\"https://i.imgur.com/06Q1fSz.png\")\n",
     "m.add_overlay(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a31f5fce-39c1-4b21-8652-1f66fc444ad9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.position=[-40,60]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "a42116dc-a283-477e-ba9a-c9a985972e17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.remove_overlay(image)"
    ]
   }
  ],
