--- a/ui-tests/tests/notebooks/VideoOverlay_update.ipynb
+++ b/ui-tests/tests/notebooks/VideoOverlay_update.ipynb
@@ -15,32 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, ImageOverlay, VideoOverlay,PopupOverlay\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f6be2475-b1a0-47f9-b3d5-0ee70f4acd8b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2c30ae7d5e44e33932854739232dccb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[0.0, 0.0], zoom=2.0)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from ipyopenlayers import Map, VideoOverlay\n",
     "m = Map(center=[0.0, 0.0], zoom=2)\n",
     "m"
    ]
@@ -54,26 +29,6 @@
    "source": [
     "video=VideoOverlay(video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\")\n",
     "m.add_overlay(video)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cb100484-37c4-46c1-a891-07dcc6c3cd29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video.position=[-70,70]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9395a2af-f495-444f-9121-8879bd75b2e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.remove_overlay(video)\n"
    ]
   }
  ],
