--- a/ui-tests/tests/notebooks/GeoTIFFTileLayer_update.ipynb
+++ b/ui-tests/tests/notebooks/GeoTIFFTileLayer_update.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map,GeoTIFFTileLayer,\n",
+    "from ipyopenlayers import Map,GeoTIFFTileLayer\n",
     "m = Map(center=[5.314329221346643, 16.3625002926901], zoom=9)\n",
     "m"
    ]
