--- a/ui-tests/tests/notebooks/PopupOverlay_update.ipynb
+++ b/ui-tests/tests/notebooks/PopupOverlay_update.ipynb
@@ -1,21 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ef41e8f9-89cd-432e-b6fc-01cef64793a5",
-   "metadata": {},
-   "source": [
-    "# Popup Overlay"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "56149091-3b9f-416e-8e13-22e59a3e9c59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, TileLayer, PopupOverlay\n",
+    "from ipyopenlayers import Map, PopupOverlay\n",
     "m = Map(center=[-11.844178003179724, 37.31477334221525], zoom=0)\n",
     "m\n"
    ]
