--- a/ui-tests/tests/notebooks/HeatmapLayer_update.ipynb
+++ b/ui-tests/tests/notebooks/HeatmapLayer_update.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map,HeatmapLayer,\n",
+    "from ipyopenlayers import Map,HeatmapLayer\n",
     "m = Map(center=[9.993566065893873, 47.226106632719905], zoom=5)\n",
     "m"
    ]
