--- a/examples/RasterLayer.ipynb
+++ b/examples/RasterLayer.ipynb
@@ -19,18 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import configparser\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('.config.ini')\n",
-    "key = config['DEFAULT']['key']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +26,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118567532fa24b9bbfe23392434a10ff",
+       "model_id": "eb8f7885d1b94654942794f633a79e87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +34,7 @@
        "Map(center=[0.0, 0.0])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,21 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118567532fa24b9bbfe23392434a10ff",
+       "model_id": "eb8f7885d1b94654942794f633a79e87",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], layers=[RasterTileLayer()], zoom=3.1446582428318823)"
+       "Map(center=[0.0, 0.0])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
